# ultra-stream

./: CMakeLists.txt  DISTRIBUTION_README.md  LICENSE  README.md  build_distribution.sh  data_processing_engine_README.md  run_full_pipeline.sh  test_distribution.sh  test_full_integration.sh
include/: composite_score_calculator.hpp  data_book.hpp  logger.hpp  parser_utils.hpp  process_packet_core.hpp  tcp_sender.hpp  types.hpp  udp_receiver.hpp
multithread/: CMakeLists.txt  CMakeSettings.json  DataProcessingService  DataProcessingService.cpp  DataProcessingService_Portable.cpp  MicroPriceService.cpp  README.md  build_multithreaded_distribution.sh  multithreaded_data_processing_engine_linux.tar.gz.sha256  test_data_processing.sh  test_multithreaded_distribution.sh
src/: composite_score_calculator.cpp  data_book.cpp  logger.cpp  main.cpp  parser_utils.cpp  tcp_sender.cpp  udp_receiver.cpp
test/: evaluate_results.py  tcp_receiver.cpp  test_all.cpp  udp_packet_generator.cpp
test_data/: input_packets.csv  input_summary.csv
test_results/: latency_report.html  latency_trace.csv  tcp_sent.csv
tools/: generate_test_vectors.cpp  udp_generator.cpp
